--- a/sample.css
+++ b/sample.css
@@ -23,7 +23,16 @@ a:hover {
   cursor: pointer;
 }
 
-
+div#headerArea {  
+    position: fixed !important;  
+    position: absolute;  
+    top: 0;  
+    left: 0;  
+    width: 100%;  
+    height: 70px;  
+    background-color:#3e444e ;  
+    color: #fff;  
+}  
 
 
 .antialiased {
@@ -138,6 +147,7 @@ body nav.navigation ul.main-navigation li:first-child,
 body nav.navigation ul.main-navigation li.first {
   padding-left: 0;
 }
+
 
 #sidebar{
     color:#ffffff;
