--- a/sample2.css
+++ b/sample2.css
@@ -26,7 +26,16 @@ a:hover {
 }
 
 
-
+div#headerArea {  
+    position: fixed !important;  
+    position: absolute;  
+    top: 0;  
+    left: 0;  
+    width: 100%;  
+    height: 70px;  
+    background-color:#3e444e ;  
+    color: #fff;  
+}  
 
 .antialiased {
   -webkit-font-smoothing: antialiased;
