--- a/sample7.css
+++ b/sample7.css
@@ -30,7 +30,16 @@ a:hover {
   cursor: pointer;
 }
 
-
+div#headerArea {  
+    position: fixed !important;  
+    position: absolute;  
+    top: 0;  
+    left: 0;  
+    width: 100%;  
+    height: 70px;  
+    background-color:#3e444e ;  
+    color: #fff;  
+}  
 
 
 .antialiased {
