--- a/sample4.css
+++ b/sample4.css
@@ -41,6 +41,8 @@ div#headerArea {
     background-color:#3e444e ;  
     color: #fff;  
 }  
+li { color:#3e444e; }
+
 
 .antialiased {
   -webkit-font-smoothing: antialiased;
@@ -167,7 +169,8 @@ body nav.navigation ul.main-navigation li.first {
     background: #FF0099;  
     top: 61px;  
     z-index: 30;
-    
+    border-radius:15px;
+
     }
     
     
