--- a/sample7.css
+++ b/sample7.css
@@ -40,6 +40,8 @@ div#headerArea {
     background-color:#3e444e ;  
     color: #fff;  
 }  
+li { color:#3e444e; }
+
 
 
 .antialiased {
@@ -177,6 +179,8 @@ body nav.navigation ul.main-navigation li.first {
     background: #FF0099;  
     top: 61px;  
     z-index: 30;
+    border-radius:15px;
+
     }
     
     
