--- a/sample5.css
+++ b/sample5.css
@@ -35,6 +35,8 @@ div#headerArea {
     background-color:#3e444e ;  
     color: #fff;  
 }  
+li { color:#3e444e; }
+
 
 
 .antialiased {
@@ -162,6 +164,8 @@ body nav.navigation ul.main-navigation li.first {
     background: #FF0099;  
     top: 61px;  
     z-index: 30;
+    border-radius:15px;
+
     }
     
     
