--- a/sample6.css
+++ b/sample6.css
@@ -37,6 +37,8 @@ div#headerArea {
     background-color:#3e444e ;  
     color: #fff;  
 }  
+li { color:#3e444e; }
+
 
 .antialiased {
   -webkit-font-smoothing: antialiased;
@@ -163,6 +165,8 @@ body nav.navigation ul.main-navigation li.first {
     background: #FF0099;  
     top: 61px;  
     z-index: 30;
+    border-radius:15px;
+
     }
     
 #contents {
